scripts/nullness/wpi/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Main.java:85: error: (dereference.of.nullable) $$ 1 $$ rpgObject1.getStats() $$ ( 2581, 2602 ) $$ dereference of possibly-null reference rpgObject1.getStats()
        System.out.println(rpgObject1.getName() + " Status: " + rpgObject1.getStatus().name() + " PLAYER1 HP : " + rpgObject1.getStats().getHp()
                                                                                                                                      ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Main.java:87: error: (dereference.of.nullable) $$ 1 $$ rpgObject2.getStats() $$ ( 2786, 2807 ) $$ dereference of possibly-null reference rpgObject2.getStats()
        System.out.println(rpgObject2.getName() + " Status: " + rpgObject2.getStatus().name() + " PLAYER2 HP : " + rpgObject2.getStats().getHp()
                                                                                                                                      ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:44: error: (return) $$ 2 $$ null (NullType) $$ @Initialized @NonNull Boolean $$ ( 965, 969 ) $$ incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Boolean
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:46: error: (dereference.of.nullable) $$ 1 $$ getStats() $$ ( 996, 1006 ) $$ dereference of possibly-null reference getStats()
        return getStats().getHp() > 0;
                       ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:46: error: (unboxing.of.nullable) $$ 1 $$ getStats().getHp() $$ ( 996, 1014 ) $$ unboxing a possibly-null reference getStats().getHp()
        return getStats().getHp() > 0;
                               ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:50: error: (dereference.of.nullable) $$ 1 $$ getStats() $$ ( 1088, 1098 ) $$ dereference of possibly-null reference getStats()
        if(!alive) getStats().setHp(0L);
                           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:81: error: (dereference.of.nullable) $$ 1 $$ rpgObject.getStats() $$ ( 2026, 2046 ) $$ dereference of possibly-null reference rpgObject.getStats()
        Long currentHp = rpgObject.getStats().getHp();
                                           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:82: error: (unboxing.of.nullable) $$ 1 $$ currentHp $$ ( 2080, 2089 ) $$ unboxing a possibly-null reference currentHp
        Long resultHp = currentHp - hp;
                        ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:82: error: (unboxing.of.nullable) $$ 1 $$ hp $$ ( 2092, 2094 ) $$ unboxing a possibly-null reference hp
        Long resultHp = currentHp - hp;
                                    ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:92: error: (dereference.of.nullable) $$ 1 $$ rpgObject.getStats() $$ ( 2410, 2430 ) $$ dereference of possibly-null reference rpgObject.getStats()
        LOGGER.info("Adding " + hp + " to " + rpgObject.getName() + " " + rpgObject.getStats().getHp());
                                                                                            ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:94: error: (unboxing.of.nullable) $$ 1 $$ livingObjectHp $$ ( 2528, 2542 ) $$ unboxing a possibly-null reference livingObjectHp
        Long processedHp = livingObjectHp + hp;
                           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:94: error: (unboxing.of.nullable) $$ 1 $$ hp $$ ( 2545, 2547 ) $$ unboxing a possibly-null reference hp
        Long processedHp = livingObjectHp + hp;
                                            ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Job.java:54: error: (dereference.of.nullable) $$ 1 $$ zkill.getName() $$ ( 1164, 1179 ) $$ dereference of possibly-null reference zkill.getName()
            String name = zkill.getName().toLowerCase();
                                       ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:17: error: (method.invocation) $$ 3 $$ setEquipable(java.lang.Boolean) $$ @UnderInitialization(org.nerv.rpgclient.item.Item.class) @NonNull Item $$ @Initialized @NonNull Item $$ ( 296, 315 ) $$ call to setEquipable(java.lang.Boolean) not allowed on the given receiver.
        setEquipable(false);
                    ^
  found   : @UnderInitialization(org.nerv.rpgclient.item.Item.class) @NonNull Item
  required: @Initialized @NonNull Item
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:45: error: (return) $$ 2 $$ @Initialized @MonotonicNonNull Boolean $$ @Initialized @NonNull Boolean $$ ( 758, 767 ) $$ incompatible types in return.
        return equipable;
               ^
  type of expression: @Initialized @MonotonicNonNull Boolean
  method return type: @Initialized @NonNull Boolean
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:35: error: (dereference.of.nullable) $$ 1 $$ monster.getStats() $$ ( 1153, 1171 ) $$ dereference of possibly-null reference monster.getStats()
        assertEquals(expectedHp, monster.getStats().getHp());
                                                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:35: error: (argument) $$ 4 $$ actual $$ Assert.assertEquals $$ @Initialized @Nullable Long $$ @Initialized @NonNull Object $$ ( 1153, 1179 ) $$ incompatible argument for parameter actual of Assert.assertEquals.
        assertEquals(expectedHp, monster.getStats().getHp());
                                                         ^
  found   : @Initialized @Nullable Long
  required: @Initialized @NonNull Object
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:47: error: (dereference.of.nullable) $$ 1 $$ monster.getStats() $$ ( 1528, 1546 ) $$ dereference of possibly-null reference monster.getStats()
        assertEquals(expectedHp, monster.getStats().getHp());
                                                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:47: error: (argument) $$ 4 $$ actual $$ Assert.assertEquals $$ @Initialized @Nullable Long $$ @Initialized @NonNull Object $$ ( 1528, 1554 ) $$ incompatible argument for parameter actual of Assert.assertEquals.
        assertEquals(expectedHp, monster.getStats().getHp());
                                                         ^
  found   : @Initialized @Nullable Long
  required: @Initialized @NonNull Object
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:54: error: (dereference.of.nullable) $$ 1 $$ healerPlayer.getJob() $$ ( 1690, 1711 ) $$ dereference of possibly-null reference healerPlayer.getJob()
        healerPlayer.getJob().addSkill(createSkill(EffectType.NECROMANCY, ANGELIC_CALLING_NAME, ANGELIC_CALLING_RECOVERY_HP));
                           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:62: error: (dereference.of.nullable) $$ 1 $$ monster.getStats() $$ ( 2083, 2101 ) $$ dereference of possibly-null reference monster.getStats()
        assertEquals(expectedHp, monster.getStats().getHp());
                                                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/PlayerExecuteSkillTest.java:62: error: (argument) $$ 4 $$ actual $$ Assert.assertEquals $$ @Initialized @Nullable Long $$ @Initialized @NonNull Object $$ ( 2083, 2109 ) $$ incompatible argument for parameter actual of Assert.assertEquals.
        assertEquals(expectedHp, monster.getStats().getHp());
                                                         ^
  found   : @Initialized @Nullable Long
  required: @Initialized @NonNull Object
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:44: error: (dereference.of.nullable) $$ 1 $$ getJob() $$ ( 853, 861 ) $$ dereference of possibly-null reference getJob()
        Skill skill = getJob().getSkill(skillName);
                            ^
23 errors
